--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Website</title>
+    <title>Haura.Ardani.Beauty</title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <h1>Hai, Myah here!</h1>
     <p>This is my first website.</p>
     <script src="script.js"></script>
 </body>
