--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <h1>Hai, Myah here!</h1>
     <p>This is my first website.</p>
+    <h2>Welcome to my shop</h2>
+    <p>Don't forget to shop until u drop</p>
     <script src="script.js"></script>
 </body>
 </html>
