--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p>This is my first website.</p>
     <h2>Welcome to my shop</h2>
     <p>Don't forget to shop until u drop</p>
+    <p>yang ni kita cuba edit direct website github</p>
     <script src="script.js"></script>
 </body>
 </html>
