--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h2>Welcome to my shop</h2>
     <p>Don't forget to shop until u drop</p>
     <p>yang ni kita cuba edit direct website github</p>
+    <p>kita cuba <strong>bold kan dia</strong> then kita try <em>itallic kan dia</em>jadikan</p>
     <script src="script.js"></script>
 </body>
 </html>
