--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <p>Don't forget to shop until u drop</p>
     <p>yang ni kita cuba edit direct website github</p>
     <p>kita cuba <strong>bold kan dia</strong> then kita try <em>itallic kan dia</em>jadikan</p>
+    <a href="t.me/psmyah">Jom join group telegram kita</a>
+    <img src="payment.jpg" alt="Payment hanya disini, beware of scammer">
     <script src="script.js"></script>
 </body>
 </html>
