--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <a href="t.me/psmyah">Jom join group telegram kita</a>
     <img src="payment.jpg" alt="Payment hanya disini, beware of scammer">
     <script src="script.js"></script>
+    <p>style="color:pink;">kita try tukar color jap</p>
 </body>
 </html>
